--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,31 @@
 .logo {
     width: 50px;
 }
-body {
-    background-color: black;
-}
 #section1 {
     height: 90vh;
     background-color: #303841;
-    /* background-image: linear-gradient(black, #303841); */
-    background-image: url(../img/jers1-bg.png);
+    /* First BG */
+    background-image: linear-gradient(#0b0d0f, #303841);
+
+    /* Second BG */
+    /* background-image: url(../img/bg-img.jpg);
     background-size: cover;
-    -webkit-filter: saturate(120%);
-    filter: saturate(120%);
+    background-position: fixed; */
+
+    /* Third BG */
+    background-image: url(../img/bg-img2.jpg);
+    background-size: cover;
 }
 h1 {
-    z-index: 100;
+
     color: white;
     font-size: 150px
 
 }
+#title p{
+    color: white;
+}
+
 #title {
     flex-direction: column;
     justify-content: center;
@@ -27,7 +34,7 @@ h1 {
     height: 100vh;
 }
 .media{
-
+    color: rgb(255, 255, 255);
     transform: rotate(90deg);
     position: absolute;
     right: -80px;
@@ -45,8 +52,12 @@ h1 {
 .media li {
     margin-right: 40px;
 }
+.media a {
+    color: white;
+    text-decoration: none; /* no underline */
+}
 
-h1 { animation: glow 2s ease-in-out infinite alternate;
+#title h1 { animation: glow 2s ease-in-out infinite alternate;
     text-align: center;
   }
   a {
@@ -61,9 +72,76 @@ h1 { animation: glow 2s ease-in-out infinite alternate;
   
   @keyframes glow {
     from {
-      text-shadow: 0 0 20px #303841;
-    }
-    to {
-      text-shadow: 0 0 30px #3a4750, 0 0 10px #eeeeee;
+        text-shadow: 0 0 20px #227e88;
+      }
+      to {
+        text-shadow: 0 0 30px #a4b5bd, 0 0 10px #a5d0d4;
     }
   }
+
+.rectangle {
+    width: 100px;
+    height: 50px;
+    background: white;
+    }
+.rectangle2 {
+    width: 50px;
+    height: 50px;
+    background: white;
+    right: 100px;
+    }
+    
+
+.rect-group {
+    transform: rotate(90deg);
+    position: absolute;
+    right: 50px;
+    top: 150px;
+}
+.rect-group2 {
+    transform: rotate(270deg);
+    position: absolute;
+    left: 50px;
+    bottom: 50px;
+}
+#section2 {
+    /* border-top: 10px solid rgb(199, 182, 182);
+    border-bottom: 10px solid rgb(199, 182, 182); */
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+#section2 h2 {
+    padding: 20px;
+    text-decoration: underline;
+    color: rgb(38, 43, 42);
+}
+.card {
+    padding: 5px;
+    border: none;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1)
+}
+.card:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);  }
+.card h5 {
+    text-align: center;
+}
+
+footer {
+background-image: linear-gradient( #4b998c,#287566) ;
+min-height: 200px;
+
+}
+
+footer h3, i, h5 {
+    color: white;
+}
+i {
+    padding-left: 15px;
+}
+footer h5 {
+    padding-left: 35px;
+}
+.footer-el {
+    padding-top: 30px;
+}
