--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -118,6 +118,7 @@ h1 {
 }
 .card {
     padding: 5px;
+    margin-top: 10px;
     border: none;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1)
 }
