--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -133,7 +133,7 @@ h6 {
 }
 
 footer {
-background-color: #4b998c;
+background-color: #242928;
 min-height: 200px;
 
 }
@@ -143,4 +143,7 @@ footer h3, i, h5 {
 }
 i {
    margin-right: 10px;
+}
+#icons {
+    margin-bottom: 20px;
 }
