--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -104,6 +104,11 @@ h1 {
     left: 50px;
     bottom: 50px;
 }
+@media only screen and (max-width: 600px) {
+    .rect-group, .rect-group2{
+      display: none;
+    }
+  }
 #section2 {
     /* border-top: 10px solid rgb(199, 182, 182);
     border-bottom: 10px solid rgb(199, 182, 182); */
