--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -57,7 +57,8 @@ h1 {
     text-decoration: none; /* no underline */
 }
 
-#title h1 { animation: glow 2s ease-in-out infinite alternate;
+#title h1 { 
+    animation: glow 2s ease-in-out infinite alternate;
     text-align: center;
   }
   a {
@@ -75,7 +76,7 @@ h1 {
         text-shadow: 0 0 20px #2d3131;
       }
       to {
-        text-shadow: 0 0 30px #a4b5bd, 0 0 10px #484c4d;
+        text-shadow: 0 0 30px #a3a7a8, 0 0 10px #d2d7d8;
     }
   }
 
@@ -83,6 +84,7 @@ h1 {
     width: 100px;
     height: 50px;
     background: white;
+    
     }
 .rectangle2 {
     width: 50px;
@@ -90,7 +92,6 @@ h1 {
     background: white;
     right: 100px;
     }
-    
 
 .rect-group {
     transform: rotate(90deg);
@@ -135,8 +136,7 @@ h2 {
     margin-bottom: 10px;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1)
 }
-.card:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);  }
+
 .card h5 {
     text-align: center;
 }
@@ -159,3 +159,4 @@ i {
 #icons {
     margin-bottom: 20px;
 }
+
