--- a/src/components/ShopCards/style.css
+++ b/src/components/ShopCards/style.css
@@ -2,6 +2,18 @@
     width: 300px;
     margin: 5px;
     overflow: hidden;
+    z-index: 1;
+
+}
+.buy-button {
+    visibility: hidden;
+    opacity: 0;
+    transition: all .5s ease;
+    z-index: 100;
+    height: 30px;
+} 
+.btn-dark {
+    width: 100%;
 }
 @media only screen and (max-width: 600px) {
     .product {
